--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "com.ash-dvlpr.cinder-utils",
   "version": "1.0.0",
+  "unity": "2022.1",
   "displayName": "Cinder Utils",
   "description": "Collection of tools I made while working on Unity projects, bundled up in a package.",
   "author": {
@@ -9,7 +10,7 @@
     "url": "https://github.com/ash-dvlpr"
   },
   "keywords": [
-    "utils"
+    "Utilities",
+    "Utils"
   ],
-  "unity": "2022.1"
 }
