Moved basic examples

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "samples": [
     {
       "displayName": "Basic Examples",
-      "description": "Contains some sample components/scripts that make use of the package.",
-      "path": "Samples~/Basic"
+      "description": "Contains some Assets that make use of the package's basic utilites.",
+      "path": "Samples~/General"
     }
   ]
 }
