--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "keywords": [
     "Utilities",
-    "Utils"
+    "Utils",
+    "EventBus",
+    "Event Bus",
+    "ServiceLocator",
+    "Service Locator"
   ],
   "dependencies": {
     "com.coffee.upm-git-extension": "git://github.com/mob-sakai/UpmGitExtension.git"
